--- a/index.html
+++ b/index.html
@@ -525,6 +525,8 @@ Error message and password prompt
 
 <li>$:/state/toc/TableOfContents/Current and Selected Work-Work by organisation--118161433</li>
 
+<li>$:/state/toc/TableOfContents/Current and Selected Work-Work by year--118161433</li>
+
 <li>$:/state/toc/TableOfContents/Current and Selected Work-Works-in-Progress--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Current and Selected Work/Current Work-Island Life--118161433</li>
@@ -540,6 +542,8 @@ Error message and password prompt
 <li>$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-Island Life--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-Karaoke Court--118161433</li>
+
+<li>$:/state/toc/TableOfContents/Current and Selected Work/Work by organisation-Camden Art Centre--118161433</li>
 
 <li>$:/state/toc/TableOfContents/Current and Selected Work/Work by organisation-Mosaic Rooms--118161433</li>
 
@@ -681,6 +685,8 @@ Error message and password prompt
 
 <li>2022-9-25 Jesmonite</li>
 
+<li>2023</li>
+
 <li>26 Oct 2021 GEMBA Meeting</li>
 
 <li>31 Mar 2021 GEMBA Meeting</li>
@@ -702,6 +708,8 @@ Error message and password prompt
 <li>Actor-Network Theory</li>
 
 <li>agree ... but</li>
+
+<li>And Did Those Feet?</li>
 
 <li>Anna Tsing</li>
 
@@ -830,6 +838,8 @@ Error message and password prompt
 <li>Hearings</li>
 
 <li>Hello</li>
+
+<li>history of race in britain</li>
 
 <li>How To Do Things With Rules</li>
 
@@ -1007,6 +1017,8 @@ Error message and password prompt
 
 <li>Score From Guantanamo</li>
 
+<li>Scotland</li>
+
 <li>Seeding the Commons</li>
 
 <li>Selected Work</li>
@@ -1014,6 +1026,8 @@ Error message and password prompt
 <li>Siraj -v- Olivia</li>
 
 <li>Site updates</li>
+
+<li>slavery</li>
 
 <li>Snuffling</li>
 
@@ -1050,6 +1064,8 @@ Error message and password prompt
 <li>Theatre in the Mill Advisory Board</li>
 
 <li>This Has Nothing To Do With Politics</li>
+
+<li>Thomas Babington Macaulay</li>
 
 <li>Transmission Gallery - What We Inherit</li>
 
@@ -13548,7 +13564,7 @@ exports.context = contextWidget;
 <div created="20211028130527432" modified="20211028151842837" title="$:/state/tab/search-results/sidebar">
 <pre>$:/core/ui/DefaultSearchResultList</pre>
 </div>
-<div created="20210925062958213" modified="20221218082341306" title="$:/state/tab/sidebar--595412856">
+<div created="20210925062958213" modified="20230112080436018" title="$:/state/tab/sidebar--595412856">
 <pre>TableOfContents</pre>
 </div>
 <div created="20210926054610913" modified="20210926054619642" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -13623,7 +13639,7 @@ exports.context = contextWidget;
 <div created="20210925130341602" modified="20220223054344263" title="$:/state/toc/TableOfContents-Social Practice--118161433">
 <pre>open</pre>
 </div>
-<div created="20220513071349532" modified="20221010123650284" title="$:/state/toc/TableOfContents-Study--118161433">
+<div created="20220513071349532" modified="20230112080421817" title="$:/state/toc/TableOfContents-Study--118161433">
 <pre>close</pre>
 </div>
 <div created="20220614055652411" modified="20220614055652411" title="$:/state/toc/TableOfContents-study--118161433">
@@ -13803,7 +13819,10 @@ exports.context = contextWidget;
 <div created="20220513065839196" modified="20220930123839041" title="$:/state/toc/TableOfContents/Current and Selected Work-Selected Work--118161433">
 <pre>close</pre>
 </div>
-<div created="20221217160525879" modified="20221217160530089" title="$:/state/toc/TableOfContents/Current and Selected Work-Work by organisation--118161433">
+<div created="20221217160525879" modified="20230112080420147" title="$:/state/toc/TableOfContents/Current and Selected Work-Work by organisation--118161433">
+<pre>close</pre>
+</div>
+<div created="20230112064839222" modified="20230112080418674" title="$:/state/toc/TableOfContents/Current and Selected Work-Work by year--118161433">
 <pre>close</pre>
 </div>
 <div created="20220701100448396" modified="20221217160333041" title="$:/state/toc/TableOfContents/Current and Selected Work-Works-in-Progress--118161433">
@@ -13829,6 +13848,9 @@ exports.context = contextWidget;
 </div>
 <div created="20220930123756544" modified="20220930123756544" title="$:/state/toc/TableOfContents/Current and Selected Work/Selected Work-Karaoke Court--118161433">
 <pre>open</pre>
+</div>
+<div created="20230112065016840" modified="20230112065206336" title="$:/state/toc/TableOfContents/Current and Selected Work/Work by organisation-Camden Art Centre--118161433">
+<pre>close</pre>
 </div>
 <div created="20221217160527199" modified="20221217160528515" title="$:/state/toc/TableOfContents/Current and Selected Work/Work by organisation-Mosaic Rooms--118161433">
 <pre>close</pre>
@@ -13863,7 +13885,7 @@ exports.context = contextWidget;
 <div created="20210925130420135" modified="20210925130438559" title="$:/state/toc/TableOfContents/Social Practice-Global Ethnic Majorities Board Association--118161433">
 <pre>close</pre>
 </div>
-<div created="20220513091156121" modified="20220701101435887" title="$:/state/toc/TableOfContents/Study-Academic Research--118161433">
+<div created="20220513091156121" modified="20230112073952776" title="$:/state/toc/TableOfContents/Study-Academic Research--118161433">
 <pre>close</pre>
 </div>
 <div created="20220514072512039" modified="20221010123642304" title="$:/state/toc/TableOfContents/Study-Concepts--118161433">
@@ -13962,7 +13984,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20221218161327008" list="[[Reimagining the Partnership Agreement Through An Anti-Racist Lens]] Contact Hello [[Current Work]]" modified="20221218161327008" title="$:/StoryList">
+<div created="20230112064829891" list="[[Current Work]] [[Current and Selected Work]]" modified="20230112080441508" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14244,6 +14266,9 @@ If not, I am going to have to leave the ceramics work (or at least the firing) t
 
 But so that I can have a back up plan for affordable making, I am going to look into casting with [[Jesmonite]].</pre>
 </div>
+<div created="20230112064904806" modified="20230112064906495" tags="[[Work by year]]" title="2023">
+<pre></pre>
+</div>
 <div created="20220218173252662" modified="20220218174101473" tags="[[Global Ethnic Majorities Board Association]]" title="26 Oct 2021 GEMBA Meeting">
 <pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/WYWY_GSylvaindeleu_Art14_Jack_Tan_50_smudged_16-9.jpg]]
 
@@ -14419,6 +14444,20 @@ Practically this means that artists are working for free. However, the violence 
 
 </pre>
 </div>
+<div created="20230112064756105" modified="20230112073647870" tags="2023 [[Camden Art Centre]] Residencies ceramics" title="And Did Those Feet?">
+<pre>
+To quote [[Thomas Babington Macaulay]], Britain's (past and present) policy was 
+
+&lt;&lt;&lt;&quot;to form a class who may be interpreters between us and the millions whom we govern,  --a class of persons Indian in blood and colour, but English in tastes, in opinions, in morals and in intellect.&quot; 
+&lt;&lt;&lt;
+
+
+I find myself a member of this class, at odds with myself--ambivalent, in between, and in the middle: a buffer between cultures, a stand-in for communities I am unable to represent,  middleman with no real agency.
+
+For this art residency, I will be making ceramics as the language of enquiry, in particular Chinese Tang Dynasty (7th-10th century AD) Sancai ceramics. Sancai (lit. &quot;three colours&quot;) are figurative Chinese funeraryware or architectural ornamentation in 3 or more contrastingly coloured drippy glazes. As a visual language, Sancai introduces into my research ideas of mourning, dissolution and the use of abstraction as an interuption to the figurative. 
+
+Tang visual culture also introduces philosophical ideas from Daoism as an alternative epistemology and cosmology in which to understand this idea of the 'middle'. Through remaking the objects of my English formal and self education I am hoping to open up the possibility of remaking my own subjectivity for an after or beyond of colonialism.</pre>
+</div>
 <div created="20220616091903611" modified="20220702082814098" tags="[[My Cloud]] economics [[new materialism]] [[more than human]] [[the potting shed]]" title="Anna Tsing">
 <pre></pre>
 </div>
@@ -14567,7 +14606,7 @@ Jack Ky Tan uses law, policy, social norms and customs as a medium of making art
 
 </pre>
 </div>
-<div created="20220925143638819" modified="20220925143653894" tags="Residencies" title="Camden Art Centre">
+<div created="20220925143638819" modified="20230112064943247" tags="Residencies [[Work by organisation]]" title="Camden Art Centre">
 <pre>See drop down menu on side/top bar.</pre>
 </div>
 <div created="20211203110059767" modified="20220514072504167" tags="Concepts" title="care">
@@ -14864,7 +14903,7 @@ It isn't about following rules by rote or reacting to circumstances. Trustees do
 
 [[Selected Work]]</pre>
 </div>
-<div created="20220513065347695" modified="20221021094430382" tags="[[Current and Selected Work]]" title="Current Work">
+<div created="20220513065347695" modified="20230112080522032" tags="[[Current and Selected Work]]" title="Current Work">
 <pre>Exhibitions, residencies, talks and projects that are currently on display or available to view. 
 
 Also check out [[recent work|Recent Work]] I've finished in the last few months together with some completed while back but are still considered recent to me because they have a long finish. 🍷 
@@ -14874,7 +14913,7 @@ Also check out [[recent work|Recent Work]] I've finished in the last few months 
 [[Works-in-Progress]] are emerging and current areas of study/research that may or may not ever be presented. Some current long term projects may be described or categorised here too, but always within the context of various nodes of artistic study and development that I am working on.
 
 !!Current Work
-|[img[https://camdenartcentre.org/content/uploads/2022/01/CAC_pentagram-story_26-1.jpeg]]|[[Studio Residency at Camden Art Centre|https://camdenartcentre.org/whats-on/jack-ky-tan]] (1 Oct 2022 - 31 March 2023). I am undertaking a ceramics residency at CAC where I will be returning to making ceramic objects again as my main vehicle of enquiry. I will be exploring the history and role of Empire education in the creation of the 'Asian middle(man/woman)'and their role in administration, law and bureaucracy, the middle manager as it were.&lt;br&gt;&lt;br&gt;To quote Macaulay, Britain's (past and present) policy was &quot;to form a class who may be interpreters between us and the millions whom we govern,  --a class of persons Indian in blood and colour, but English in tastes, in opinions, in morals and in intellect.&quot; Therefore the figure of the Rishi Sunaks, Suella Bravermans and Kwasi Kwatengs of the world interests me in this research.&lt;br&gt;&lt;br&gt;But this isn't a sociology or history of management project and I will be making ceramics as the language of enquiry, in particular Chinese Tang Dynasty (7th-10th century AD) Sancai ceramics; these are originally figurative funerary ware in bold 3 or more colour drippy glazes. So Sancai introduces into my research ideas of flow, mourning and the overlay or interruption of abstraction. And Tang visual culture introduces philosophical ideas from Daoism as an alternative epistemology and cosmology in which to understand this idea of the 'middle'.|
+|[img[https://camdenartcentre.org/content/uploads/2022/01/CAC_pentagram-story_26-1.jpeg]]|Studio Residency at [[Camden Art Centre|https://camdenartcentre.org/whats-on/jack-ky-tan]] (1 Oct 2022 - 31 March 2023). I will be returning to making ceramic objects again as my main vehicle of enquiry. I will be exploring my love of and desires around English culture and how I was educated to be so, through the legacy of the colonial education policy and the prevailing ideals of Britishness from Victorian times to today. In the studio, I will be remaking objects that have achored my English subjectivity and decorating these with Chinese &quot;sancai&quot; funerary glazes as a process of laying ideals to rest and finding a 'beyond' or after of colonial education.|
 |[img[https://i.ytimg.com/vi/Cs2czy7bMG4/maxresdefault.jpg]]|I have been commissioned by the [[Sheffield Centre for Equity and Inclusion|https://equityinclusionsheffield.co.uk/]] to facilitate knowledge exchange workshops and develop a draft partnership agreement that the centre/university could use with its external partners. Titled '[[Reimagining the Partnership Agreement Through An Anti-Racist Lens]]', I will be creating a partnership contract using art practice approaches that resists traditional ideas of what a partnership is, and instead opens up contractual space for new kinds of relating and partnering.|
 |[img[https://www.artsprofessional.co.uk/sites/artsprofessional.co.uk/files/styles/551_by_350_feature/public/main/articles/edited_jack_tan_performing_boardness.png?itok=Zs5rh09h]]|[[Performing 'boardness' article|https://www.artsprofessional.co.uk/magazine/article/performing-boardness]] on Arts Professional about my residency on the FACT Liverpool Board of Trustees. CEO Nicola Triscott reflects on what happens when an organisation puts an artist at the heart of governance, but still allows the artist to be an artist.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Mandy%20Merzaban,%20Workspace%20Tableau%202021.png?raw=true]]|''Slow Writing'' with Mandy Merzaban, Autumn 2022. A collaborative writing project with Mandy Merzaban to share our thoughts and practices. Commissioned by Delfina Foundation and funded by Tate.|
@@ -15403,7 +15442,7 @@ Join our mailing list [[here|https://be91f51d.sibforms.com/serve/MUIEACV8M3ofzFX
 
 [img[https://github.com/jackkytan/websiteimages/blob/master/GEMBA%20jamboard2.png?raw=true]]</pre>
 </div>
-<div created="20220925143756535" modified="20220925144307838" tags="[[Camden Art Centre]]" title="Global Majority Victorian Britain">
+<div created="20220925143756535" modified="20230112065528544" tags="Scotland slavery [[history of race in britain]]" title="Global Majority Victorian Britain">
 <pre>''Joseph Knight''
 
 Joseph Knight v Sir John Wedderburn (1774): https://www.nrscotland.gov.uk/research/learning/slavery/slavery-freedom-or-perpetual-servitude-the-joseph-knight-case
@@ -15475,6 +15514,9 @@ As such this is a [[TiddlyWiki|https://en.wikipedia.org/wiki/TiddlyWiki]], which
 To help you navigate, you can see your open tiddlers listed in the 'Open' column of the sidebar/topbar, as well as a table of 'Contents' where you can find suggested entry points into this wiki. You can also view latest tiddlers I have created or updated under the 'Recent' column.  Finally there are bi-directional links at the bottom of many tiddlers, so you can trace your path backwards and forwards if you wish.
 
 You are very welcome to look around and explore. But bear in mind that like many artists' studios, things get messier (and hopefully more interesting) the deeper you go!</pre>
+</div>
+<div created="20230112065328620" modified="20230112065331818" tags="Concepts" title="history of race in britain">
+<pre></pre>
 </div>
 <div created="20210925114816139" modified="20220701112132393" tags="[[Selected Work]] 2015 Installation [[Rules and Art]]" title="How To Do Things With Rules">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Visitor-Service-Officer_33.jpg?raw=true]]
@@ -17546,6 +17588,9 @@ The player picks a card from each suit and combined, they tell the player what t
 
 The idea of chance not only alludes to John Cage and his idea that ‘everything is music’ and in this case for me ‘everything is art’. But it also refers to lived reality of how people (particularly Black and Asian men) are vicitmised and incarcerated randomly and arbitrarily, and how through preemptive law enforcement and the doctrine of the State of Exception, the human right to freedom the rule of law is being compromised.”</pre>
 </div>
+<div created="20230112065340166" modified="20230112065341699" tags="Concepts" title="Scotland">
+<pre></pre>
+</div>
 <div created="20220616113154087" modified="20220701095832796" tags="[[Current Work]] gardening governance [[Custom Food Lab]] Works-in-Progress" title="Seeding the Commons">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Custom%20Food%20Lab%20scoping%20zoom.jpg?raw=true]]
 
@@ -17670,6 +17715,9 @@ Verdict:  Olivia won</pre>
 [[artists's resources]],
 [[equality resources]]
 </pre>
+</div>
+<div created="20230112065304880" modified="20230112065306833" tags="Concepts" title="slavery">
+<pre></pre>
 </div>
 <div created="20220616092223199" modified="20220701100419997" tags="Study Works-in-Progress" title="Snuffling">
 <pre>[img[https://res.cloudinary.com/pelagaggia-truffles/images/f_auto,q_auto:best/v1605659059/pig-truffles_1006088c/pig-truffles_1006088c.jpg]]
@@ -17899,6 +17947,13 @@ Saturday 29 November 2014, 4.00-6.00pm
 A number of art, design and curatorial collectives will participate in a roundtable to discuss their experiences of operating within the current political climate, with a view of exchanging current knowledge of social and artistic practices, and to establish a supportive network. Contact Jack Tan if you would like to join the roundtable.
 
 //In association with the Centre for Performance and Creative Exchange and Dept of Drama Theatre &amp; Performance, University of Roehampton//</pre>
+</div>
+<div created="20230112072255885" modified="20230112072335494" title="Thomas Babington Macaulay">
+<pre>https://en.wikipedia.org/wiki/Thomas_Babington_Macaulay
+
+http://www.columbia.edu/itc/mealac/pritchett/00generallinks/macaulay/txt_minute_education_1835.html
+
+https://en.wikipedia.org/wiki/English_Education_Act_1835#:~:text=Macaulay's%20%22Minute%20Upon%20Indian%20Education%22,-To%20remove%20all&amp;text=I%20have%20conversed%20both%20here,literature%20of%20India%20and%20Arabia.</pre>
 </div>
 <div created="20220706092539923" modified="20220706093435519" tags="[[Current Work]]" title="Transmission Gallery - What We Inherit">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Transmission%20Constitution%20-%20what%20we%20inherit%20square.jpg.jpg?raw=true]]
