--- a/index.html
+++ b/index.html
@@ -14085,7 +14085,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20230216095912798" list="" modified="20230216123124081" title="$:/StoryList">
+<div list="Contact Hello [[Current Work]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -15075,7 +15075,7 @@ It isn't about following rules by rote or reacting to circumstances. Trustees do
 
 [[Selected Work]]</pre>
 </div>
-<div created="20220513065347695" modified="20230216124624327" tags="[[Current and Selected Work]]" title="Current Work">
+<div created="20220513065347695" modified="20230216131807506" tags="[[Current and Selected Work]]" title="Current Work">
 <pre>Exhibitions, residencies, talks and projects that are currently on display or available to view. 
 
 Also check out [[recent work|Recent Work]] I've finished in the last few months together with some completed while back but are still considered recent to me because they have a long finish. 🍷 
@@ -15177,6 +15177,7 @@ A chapter for Arts Catalyst's new publication //Practicing the Planetary: Notes 
 
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Dance%20Art%20Foundation%20-%20into_the_mountain_edit_193-1.jpg?raw=true]]|[[Dance Art Foundation Artist Council]] (Sep 2020 - ongoing) - I am part of  of the Dance Art Foundation's artist council who convene to advise, reflect and share knowledge about making, organising, governance, leadership, redistribution and participation in the contemporary dance sector.|
 |[img[https://github.com/jackkytan/websiteimages/blob/master/Theatre%20in%20the%20Mill%20front.jpg?raw=true]]|[[Theatre in the Mill Advisory Board]] (April 2022 - ongoing) - I have joined ~TiM's advisory board to help the organisation think through governance, its vision, programming, relevance and further develop its relationship with Bradford University.|
+|[img[https://pbs.twimg.com/profile_images/1585242523315965953/jzGPAhPn_400x400.jpg]]|[[CVAN London|https://cvan.art/regions/london/]] Steering Group (Jan 2023 - ongoing). I joined the steering group of the new branch of the Contemporary Visual Arts Network, CVAN London.|
 
 &lt;br&gt;</pre>
 </div>
