--- a/index.html
+++ b/index.html
@@ -1035,12 +1035,6 @@ Error message and password prompt
 
 <li>Roundtable on Trustee's duties</li>
 
-<li>RPG Longsight</li>
-
-<li>RPG Longsight (Foundation CIO)</li>
-
-<li>RPG Longsight Mission Vision Values</li>
-
 <li>Rules and Art</li>
 
 <li>S:E:P:A:L:S:</li>
@@ -14085,7 +14079,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Contact Hello [[Current Work]]" title="$:/StoryList">
+<div created="20230220110923929" list="" modified="20230220110958559" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -17673,89 +17667,6 @@ First half - What are trustees' current duties and liabilities?
 &lt;div&gt;&lt;/div&gt;
 
 * Reviewing organisational history is a useful way to understand its culture. Lux's history is documented, among other places, in this Moving Image Review &amp; Art Journal article: [[Lux et Umbra: On the slow rise and fast fall of the Lux Centre|https://www.ingentaconnect.com/content/intellect/miraj/2017/00000006/f0020001/art00019]] by Ben Cook.</pre>
-</div>
-<div created="20220610192915195" modified="20220909160520804" tags="" title="RPG Longsight">
-<pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20an%20experiment.webp]]
-
-''June 2022 - June 2023, Longsight Arts Space, Manchester''
-
-''Role Play Governance Longsight'' is a yearlong participatory artwork that will test how different legal formats will affect executive decision-making, board or director accountability, member/customer/ community engagement and fundability/ survivability. Longsight Art Space will deliver its programme by roleplaying 4 different organisational governance models.
-
-Over the next 12 months, this will culminate in a new co-created organisational model for LAS with its stakeholders and employees via artistic methodologies. Through each quarter LAS will adopt a different legal form: a foundation model (single tier) Charitable Incorporated Organisation (CIO), a Community Interest Company or social enterprise, an association model (two tier) CIO, and finally a Community Benefit Society or Co-op.
-
-​The project will also explore how LAS’ overall mission, vision and values are affected by each organisational form. Eventually, this project will provide the real directors and board of LAS with valuable insight into the advantages and disadvantages of each model of incorporation and inform our decision-making processes going forward.
-
-RPG Longsight will be a form of participatory theatre, durational installation art and social practice with Longsight residents and LAS’ stakeholders invited to participate in the roleplay as directors, trustees, volunteers, members and customers. Depending on their role in each quarter, participants will attend
-and make decisions at AGMs, board meetings, town halls or at directors’ meetings. Each quarter will also manifest in different visual branding, interior design or staging/set to enhance the participatory experience as well as culminating in an exhibition to engage the public and to provoke discussion about
-legal and policy creativity. More details on how to get involved www.proforma.org.uk/opportunities
-
-PROFORMA has commissioned artist Jack Ky Tan to create and facilitate this project together with PROFORMA’s directors Chris Bailkoski and Chi Emecheta. Workshops and participatory sessions will be announced very soon.
-
-Q1 - [[Foundation model/Single Tier Charitable Incorporated Organisation|RPG Longsight (Foundation CIO)]]
-
-Q2 - Association model/Two Tier Charitable Incorporated Organisation
-
-Q3 - Community Interest Company/Social Enterprise
-
-Q4 - Community Benefit Society/Co-op
-
-Find out more on [[Proforma's website|https://www.proforma.org.uk/rpglongsight]]
-
-[img[https://github.com/jackkytan/websiteimages/blob/master/RPG%20Longsight%20-%20vanessa%20scott%20talk.jpg?raw=true]]
-&lt;br&gt;^^Talk by artist Vanessa Scott as part of her exhibition //Saturated// at Longsight Art Space, 17 May 2022^^</pre>
-</div>
-<div created="20220610193943267" modified="20220622082035622" tags="[[RPG Longsight]]" title="RPG Longsight (Foundation CIO)">
-<pre>[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20Q1%20AGM%20advert.jpg]]
-
-''RPG Longsight - Quarter 1 - Foundation/Single Tier CIO''
-&lt;br&gt;''June-Aug 2022''
-
-Longsight Art Space (LAS) launched in April 2022 and since then it has already produced two exhibtions and a number of public events including a Caribbean Carnival to coincide with the Queen's Jubilee celebrations. Q1 of RPG Longsight will begin with this busy programme already underway and will take the form of a 'Foundation' model Charitable Incorporated Organisation (CIO). This is a single tier charity where its members are the same people as its trustees. Later in Q2, we will roleplay a 2 tier CIO where the trustees and members are different groups of people. 
-
-Q1 will comprise 2 initial meetings with participants roleplaying trustees. The aim of the first meeting will be to draw up LAS' [[Mission, Vision and values|https://www.nonprofitnext.org/sites/default/files/resource_library/mission_vision_values_statements_rf.pdf]]. Then building on this, we will develop LAS' [[Strategic Plan|https://knowhow.ncvo.org.uk/organisation/strategy/options/plan]] in the second meeting. This will culminate in a 3rd meeting which will be the organisation's AGM, where the Board will present the Mission, Vision, Values and Strategic Plan to an invited audience of stakeholders and community members.
-
-The AGM will also be the point where we transition the organisation into a 2 tier 'Association' model CIO. Audience members will be invited to formally become the membership of the CIO.
-
-Throughout the process of board meetings and AGMs, we will also be considering how to do meetings and decision-making better and how to make them more inclusive and accessible to participants who do not have corporate experience, or who have particular access needs. In particular, we will also be open to adopting different or non-Eurocentric approaches or understandings of accountability, governance and leadership.
-
-''Dates:''
-
-25th June 12pm-3pm – Defining LAS's [[Mission, Vision and Values|2022-06-21 Mission Vision Values]].
-
-16th July 12pm-3pm – Brainstorming and drafting a Strategic Plan
-
-30th July 12pm-3pm – Annual General Meeting
-
-&lt;br&gt;
-
-------
-
-[img[https://raw.githubusercontent.com/jackkytan/websiteimages/master/RPG%20Longsight%20-%20photo%20of%20empty%20gallery.webp]]
-
-!!!Call for Participants to roleplay Trustees
-
-We are seeking participants for RPG Longsight, a newly commissioned performance and installation work by artist Jack Ky Tan where 4 different organisational models will be tested over a year for the new Longsight Art Space (LAS) in Manchester. Participants will be asked to roleplay as Board Members in the first iteration of LAS as a single tier ‘Foundation’ model Charitable Incorporated Organisation (CIO), i.e., a charity with a Board of Trustees.
-
-You will be invited to attend Board meetings and to play the role of charity trustees who have the responsibility to develop the mission, vision and values of LAS, to strategically direct its work and programme, and to evaluate how LAS is meeting community and stakeholder needs. With you, we will develop the vision, mission and values for Longsight Art Space. You will have the opportunity to input into our creative programme and activities at LAS.
-
-The Q1 roleplay will end in a short exhibition where you and LAS staff, audiences, users and neighbours will be provided space to reflect on what it was like to encounter LAS as a single tier CIO.
-
-[[Download the full Call for Participants here|https://github.com/jackkytan/websiteimages/raw/master/RPG%20Longsight%20-%20Q1%20Participant%20EOI.pdf]]</pre>
-</div>
-<div created="20220621135743924" modified="20220623172547051" tags="[[RPG Longsight (Foundation CIO)]]" title="RPG Longsight Mission Vision Values">
-<pre>!!Q1: Workshop 1
-Saturday 25 June 2022, 12-3pm
-
-|12:00|Arrival and hellos|all|
-|12:10|Introducing each other|all|
-|12:20|A briefing about RPG Longsight and Q1: Foundation CIO model|Chris/Chi/Jack|
-|12:40|Presentation from Directors of Longsight Arts Space|Chi/Chris|
-|1:15|Lunch|all|
-|1:45|Discussion about LAS' Mission, Vision and Values|Jack|
-|2:15|Discussion about Trustee's terms of reference and recruitment|Jack|
-|2:45|Looking ahead to Strategic Planning on 16 July|Jack|
-
-</pre>
 </div>
 <div created="20220701112139500" modified="20220701112140170" tags="[[Law and Art]]" title="Rules and Art">
 <pre></pre>
