--- a/index.html
+++ b/index.html
@@ -14079,7 +14079,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20230220110923929" list="" modified="20230220110958559" title="$:/StoryList">
+<div created="20230220111213037" list="" modified="20230220111301095" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -14282,7 +14282,7 @@ Working so closely with growing food has fundamentally changed the way we think 
 &lt;&lt;&lt;
 </pre>
 </div>
-<div created="20220621132004658" modified="20230216104515449" tags="governance Blog [[trustee resources]] [[RPG Longsight (Foundation CIO)]]" title="2022-06-21 Mission Vision Values">
+<div created="20220621132004658" modified="20230220111242121" tags="governance Blog [[trustee resources]]" title="2022-06-21 Mission Vision Values">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Journal%20-%20mission%20vision%20values.png?raw=true]]
 
 I am preparing to head to Manchester this weekend to facilitate a board meeting where we will discuss and make some decisions on what the organisation is about, in particular its mission, vision and values. I often cringe when I ask organisations what their 'mission, vision and values statements' are because:
@@ -14298,8 +14298,7 @@ There is also the issue with the word 'statement'. Is a statement the best way t
 Statements, like all words, always fall short of grasping social reality (or indeed any reality if we want to understand things metaphysically), especially when it is in the nature of social reality to continually change. As an artist, statements are for me launch points to other modes of perceiving and relating. They are signposts, and not the real thing. They are snapshots, and not the real thing. But signposts and snapshots aren't unhelpful if we understand them for what they are.
 
 Additionally, if statements can be written in such a way as to elevate words from having fixed meaning to also having poetic meaning, then Mission Vision Value statements can start to sympathetically vibrate with the thing that they are representing.  They can become important organisational text that generates energy, ideas, motivation and inspiration the way that a work of art or poem does: one that is in ongoing conversation with the organisation about accountability and raison d'etre.
-
-- 21 June 2022 (written as part of preparation for [[RPG Longsight Q1: Workshop 1|RPG Longsight Mission Vision Values]]</pre>
+</pre>
 </div>
 <div created="20220622074739353" modified="20230216110144804" tags="governance [[more than human]] gardening Blog [[Custom Food Lab]]" title="2022-06-22 Planting a Governance Garden">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Custom%20Food%20Lab%20-%20my%20garden.jpg?raw=true]]
@@ -17434,7 +17433,7 @@ Our approach to reading and reading groups is developing with time, but here are
 
 </pre>
 </div>
-<div created="20220612193657946" modified="20221217161317443" tags="Talks 2022 governance [[Joon-Lynn Goh]]" title="Reimagining Governance">
+<div created="20220612193657946" modified="20230220111257669" tags="Talks 2022 governance [[Joon-Lynn Goh]]" title="Reimagining Governance">
 <pre>[img[https://github.com/jackkytan/websiteimages/blob/master/Talk%20-%20Reimagining%20Governance%20-%20speakers.jpg?raw=true]]
 
 Wednesday, 15 June 2022
@@ -17455,7 +17454,6 @@ Book tickets [[here|https://www.eventbrite.com/e/re-imagining-governance-tickets
 !!I will be talking about
 
 * [[Global Ethnic Majorities Board Association]]
-* [[RPG Longsight]]
 * [[Sample artist contract]]
 * [[Devising Governance]]
 
@@ -17887,7 +17885,7 @@ Finally, because I am talking about all this in terms of a future imagination or
 
 </pre>
 </div>
-<div created="20220612205557184" modified="20220612205630080" tags="[[S:E:P:A:L:S: Jack Ky Tan]]" title="S:E:P:A:L:S: Jack Ky Tan 3">
+<div created="20220612205557184" modified="20230220111316372" tags="[[S:E:P:A:L:S: Jack Ky Tan]]" title="S:E:P:A:L:S: Jack Ky Tan 3">
 <pre>''Part 3. Artistic Experiments in the Beyond''
 
 In this final section of my talk, I want to share my own experiments with governance in the arts, which I hope is grounded in the methodologies that I have just outlined. I have 5 projects which are relevant to this discussion.
@@ -17912,18 +17910,6 @@ In this final section of my talk, I want to share my own experiments with govern
 * As an artist-led membership organisation, I think aptly and beautifully, Transmission will be doing this via a public programming about constitution writing. 
 * They have invited me to come alongside to be a critical friend or an organisational dramaturg in this process of constituting and constitution writing.
 * My sense is that I want to preserving the artist-led co-creative nature of their governance ethos, and to enable them to incorporate without losing this and becoming a typical institution where standard charitable structures of accountability requires a detached Board of Trustees, made up of the great and the good of Glasgow.
-
-//RPG Longsight// - New arts organisation in Longsight, Manchester
-
-* Very new commission. My proposal accepted to role play 4 different governance and organisational models in each quarter.
-* The organisation will produce the year’s programme as planned, but do it via 4 different models of:  
-** a single tier or foundation model CIO; 
-** a double tier CIO or association model CIO;
-** a Community Interest Company or a non-profit company;
-** a cooperative or community benefit society.
-* The aim is to test how each of these models inflect the curatorial programme, how the community likes or takes to each model, and what are the implications of each model on inclusion, diversity and protected characteristics.
-
-I don’t know whether this way of experimenting will lead to insights on a new arts ecology, or if these yet realise the methodologies of critical asianness, intra-active world-making, more-than-human interconnectedness and queer futurity. But as an artist, the only way I know is by doing and trying it out, and I would encourage you to also try and do, in your own ways.
 </pre>
 </div>
 <div created="20220208153655156" modified="20230216105943316" tags="[[artist resources]] [[Current Work]] [[Contract Art]] [[FACT Liverpool]]" title="Sample artist contract">
