--- a/index.html
+++ b/index.html
@@ -14139,7 +14139,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20230406112757324" list="refusal Contact Hello [[Current Work]]" modified="20230406134018788" title="$:/StoryList">
+<div list="Contact Hello [[Current Work]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521145647980" tags="$:/giffmex/bigeditarea $:/giffmex/stroll" title="$:/tags/EditToolbar">
@@ -15083,8 +15083,10 @@ Conference (2015) was part of Jack Ky Tan's solo exhibition [[How To Do Things W
 <div created="20211214094057199" modified="20230216110457342" tags="[[Artistic Practice]]" title="Consulting and Advisory work">
 <pre></pre>
 </div>
-<div created="20210925113223427" modified="20220708074424546" tags="About" title="Contact">
+<div created="20210925113223427" modified="20230411074607336" tags="About" title="Contact">
 <pre>|''My email address has changed and is @@color:red;no longer mail@jacktan.net@@. &lt;br&gt;To get in touch, please use the contact form below or DM me.''|
+
+|I am away on my Easter break until ''@@color:red;24 April 2023@@'' and will respond to any messages after that.|
 
 💌 email me using [[this contact form|https://jacktan.wordpress.com/contact/]]
 
